feat: adding filter options